@@ -1,3 +1,11 @@
+2004-01-09 Erik Petrich <epetrich@ivorytower.norman.ok.us>
+
+	* src/ds390/main.c,
+	* src/z80/main.c: added missed needLinkerScript flags (more than
+	one port structure defined in these file)
+	* src/ds390/gen.c (aopForSym, aopOp, operandsEqu, aopOp3): fixed
+	bug #795325
+
 2004-01-08 Vangelis Rokas <vrokas@otenet.gr>
 
 	* src/SDCCmain.c: removed various references to DEFAULT_PORT
